man-db (2.4.3-3) UNRELEASED; urgency=low

  * Ignore SIGINT and SIGQUIT in the parent while running subprocesses
    (closes: #328982).

 -- Colin Watson <cjwatson@debian.org>  Wed, 21 Sep 2005 11:00:28 +0100

man-db (2.4.3-2) unstable; urgency=low

  * Use 'col -b -p -x' rather than just 'col -b' when stdout is not a
    terminal. Partly fixes #319952, but col still needs to be fixed to cope
    with UTF-8 input.
  * Use www-browser as default HTML pager, and suggest the virtual
    www-browser package (closes: #321769).
  * Update debian/copyright with the FSF's new address.

 -- Colin Watson <cjwatson@debian.org>  Tue, 30 Aug 2005 13:37:35 +0100

man-db (2.4.3-1) unstable; urgency=low

  * New upstream release.
    - Make most calls to external programs directly rather than going via
      the shell.
    - When stdout is not a terminal, man pages will be formatted in plain
      text without the use of backspace or ANSI formatting characters.
    - Try harder to find somewhere to store cat pages for symlinked man
      pages (closes: #129575).
    - When invoking apropos (man -k) or whatis (man -f) as external
      programs, man now only passes through command-line options understood
      by the respective programs (closes: #207436).
    - Drop versions and/or modifiers from locale names before deciding how
      to handle them (closes: #241387).
    - Fix portable shell issues in mkcatdirs (closes: #256279).
    - Terminate NAME section parsing on encountering a macro definition
      (closes: #275562).
    - Add -s/--section option to apropos and whatis (closes: #218407).
    - Update Polish translation (thanks, Robert Luberda; closes: #245057).
    - Update Russian translation (thanks, Yuri Kozlov; closes: #268584).
  * Policy version 3.6.2: no changes required.

 -- Colin Watson <cjwatson@debian.org>  Mon,  4 Jul 2005 00:27:05 +0100

man-db (2.4.2-23) unstable; urgency=low

  * Update config.guess and config.sub to 2005-04-22 (closes: #315075).
